--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet');
 
 * {
   margin: 0;
@@ -37,6 +38,12 @@
   font-weight: 400;
   font-style: italic;
 }
+
+@mixin roboto-arial-regular() {
+  font-family: "Roboto Condensed", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+} 
 
 $background-color1: #F7F9FA;
 $background-color2: #ECEDF6;
@@ -82,14 +89,45 @@ header {
 }
 
 .form-input {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 5vh;
   padding-left: 3vw;
   padding-right: 3vw;
+  & .input-wrapper {
+    position: relative;
+  }
 
-  & button {
+  & .input-wrapper div {
+    font-family: Roboto, Arial;
+    position: absolute;
+    bottom: -3vh;
+    left: 1vw; 
+    white-space: nowrap;
+    background-color: rgb(150, 149, 149);
+    color: $white-font;
+    padding-top: 0.15vh;
+    padding-bottom: 0.15vh;
+    padding-left: 0.4vw;
+    padding-right: 0.4vw;
+    border-radius: 3px;
+    transition: opacity 0.5s;
+    pointer-events: none;
+    opacity: 0;
+  }
+
+  & .input-wrapper:hover div {
+    opacity: 1;
+  }
+
+  & .input-wrapper:focus-within div {
+    opacity: 0;
+  }
+
+  & .submit-button {
+    position: relative;
     width: 15vw;
     height: 100%;
     @include poppin-regular();
@@ -100,6 +138,10 @@ header {
     cursor: pointer;
   }
   margin-bottom: 2vh;
+}
+
+.submit-button:active {
+  background-color: $blue-fb-dark;
 }
 
 .items-container {
@@ -145,6 +187,27 @@ header {
   }
 } 
 
-.submit-button:active {
-  background-color: $blue-fb-dark;
+//tool-tip section
+
+.submit-button .tool-tip {
+
+  font-family: Roboto, Arial;
+  position: absolute;
+  bottom: -2.5vh;
+  left: 1vw; 
+  white-space: nowrap;
+  background-color: rgb(150, 149, 149);
+  padding-top: 0.2vh;
+  padding-bottom: 0.2vh;
+  padding-left: 0.4vw;
+  padding-right: 0.4vw;
+  border-radius: 3px;
+  opacity: 0;
+  transition: opacity 0.5s;
+  pointer-events: none;
 }
+
+.submit-button:hover .tool-tip {
+  opacity: 1;
+}
+
