--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet');
+//importing mixins: it automatically change the extension in the text below and remove the _ as well.
+@import './mixin';
 
 * {
   margin: 0;
@@ -9,41 +11,7 @@
   text-decoration: none;
 }
 
-@mixin poppin-thin() {
-  font-family: "Poppins", serif;
-  font-weight: 100;
-  font-style: normal;
-}
 
-@mixin poppin-regular() {
-  font-family: "Poppins", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-@mixin poppin-semibold() {
-  font-family: "Poppins", serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-@mixin poppin-bold() {
-  font-family: "Poppins", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-@mixin poppin-italic-regular() {
-  font-family: "Poppins", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-@mixin roboto-arial-regular() {
-  font-family: "Roboto Condensed", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-} 
 
 $background-color1: #F7F9FA;
 $background-color2: #ECEDF6;
@@ -98,6 +66,12 @@ header {
   padding-right: 3vw;
   & .input-wrapper {
     position: relative;
+    &:hover div {
+      opacity: 1;
+    }
+    &:focus-within div{
+      opacity: 0;
+    }
   }
 
   & .input-wrapper div {
@@ -114,17 +88,16 @@ header {
     padding-right: 0.4vw;
     border-radius: 3px;
     transition: opacity 0.5s;
-    pointer-events: none;
     opacity: 0;
   }
 
-  & .input-wrapper:hover div {
+/*   & .input-wrapper:hover div {
     opacity: 1;
   }
 
   & .input-wrapper:focus-within div {
     opacity: 0;
-  }
+  } */
 
   & .submit-button {
     position: relative;
